--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "server for workout log app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./node_modules/http-server/bin/http-server"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "author": "christianingram",
   "license": "MIT",
   "dependencies": {
